<resources>
    <string name="app_name">HUJI Assistant</string>
    <string name="scan_something">קדימה לסרוק!</string>
    <string name="camera">צילום</string>
    <string name="gallery">העלה מהגלרייה</string>
    <string name="image_title">הוסף תיאור לתמונה</string>
    <string name="aguda">אגודת הסטודנטים</string>
    <string name="kolzchut">אתר כל-זכות</string>
    <string name="link_to_drive">דרייברים של חוגים</string>
    <string name="rishumnet">רישום.נט</string>
    <string name="recommendations">המלצות על קורסים</string>
    <string name="drawer_header"><b><u><i>קישורים שימושיים</i></u></b></string>
    <string name="upload_button">העלאה</string>
    <string name="show_all_pictures_button">הצג תמונות</string>
    <string name="show_all_pdf_button">הצג מסמכים</string>
    <string name="pdf_name">שם</string>
    <string name="loading">טוען…</string>
    <string name="logo_description">לוגו</string>
    <string name="reset_image">האם להשליך את השינויים שנעשו?</string>
    <string name="delete_course_alert">האם אתה בטוח שברצונך למחוק את הקורס? הפעולה אינה ניתנת לביטול</string>
    <string name="positive_answer">כן</string>
    <string name="negative_answer">לא</string>
    <string name="upload_Successfully_message">הועלה בהצלחה</string>
    <string name="upload_failed_message">היתה בעיה בהעלאה</string>
    <string name="close_app">האם לסגור את האפליקציה?</string>
    <string name="please_wait_message">בבקשה המתן…</string>
    <string name="user_exist_message">קיים במערכת משתמש עם האימייל הנ״ל</string>
    <string name="scan_Successfully_message">הסריקה בוצעה בהצלחה</string>
    <string name="scan_failed_message">היתה בעיה בסריקה</string>
    <string name="reset_password">האם לאפס את הסיסמא?</string>
    <string name="enter_email_for_reset_password">הכנס את המייל שלך כדי לקבל קישור לאיפוס הסיסמא</string>
    <string name="check_your_mail_for_reset_link_message">בדוק את המייל לקבלת קישור לאיפוס הסיסמא</string>
    <string name="try_again_later_message">היתה בעיה, נסה שוב מאוחר יותר</string>
    <string name="incorrect_username">שם משתמש וסיסמה לא נכונים. נסה להזין שוב או להירשם בתור משתמש חדש</string>
    <string name="logout">האם אתה בטוח שברצונך להתנתק?</string>
    <string name="insert_grade">הוספת ציון</string>
    <string name="approve_btn">אישור</string>
    <string name="register_Successfully_message">נרשמת בהצלחה!</string>
    <string name="register_failed_message">היתה בעיה ברישום, אנא נסה שנית מאוחר יותר</string>
    <string name="change_password">הקלד סיסמא חדשה</string>
    <string name="change_password2">הקלד שנית את הסיסמא חדשה</string>
    <string name="old_password">הקלד סיסמא ישנה</string>
    <string name="password_updated_Successfully_message">הסיסמא עודכנה בהצלחה</string>
    <string name="password_failed_to_update_message">היתה בעיה בעדכון, אנא נסה שנית מאוחר יותר</string>
    <string name="incorrect_old_password">סיסמא ישנה שגויה</string>
    <string name="hello_message">שלום</string>
    <string name="old_password_is_empty">נא להזין סיסמא ישנה</string>
    <string name="new_password_is_empty">נא להזין סיסמא חדשה</string>
    <string name="repeat_password_is_empty">נא לחזור על הסיסמא החדשה</string>
    <string name="new_pass_is_not_equal_to_repeat_pass">נא לחזור במדויק על הסיסמא החדשה</string>
    <string name="upload_pictures_button">העלאת סיכומים</string>
    <string name="enter_course_number">הזן מספר קורס</string>
    <string name="show_attendance">צפייה ברשימת נוכחות</string>
    <string name="change_language">Change language</string>
    <string name="next">המשך</string>
    <string name="registration_process_description">מסך הרשמה למערכת - שלב 1 מתוך 3</string>
    <string name="new_registration_process_description">מסך רישום משתמש חדש מסך 1 מתוך 3</string>
    <string name="course_number_is_empty">אנא הזן מספר קורס שאליו הקובץ רלוונטי</string>
    <string name="image_description_is_empty">אנא הזן תיאור לקובץ</string>
    <string name="course_number_is_not_valid">מספר קורס לא תקין</string>
    <string name="forgot_password">שכחתי סיסמא</string>
    <string name="login_screen">מסך התחברות למערכת</string>
    <string name="logout_textview">התנתק</string>
    <string name="search_course">חפש לפי מספר קורס…</string>
    <string name="choose_course">בחר קורס שהקובץ מיועד אליו</string>
    <string name="edit_degree_data">עריכת נתוני תואר</string>
    <string name="choose_a_degree">בחר תואר</string>
    <string name="choose_a_year_for_the_degree">בחר שנה לתואר</string>
    <string name="choose_a_course">בחר קורס</string>
    <string name="other">אחר</string>
    <string name="Notice_you_got_some_Course_kdam_missing">שים לב! חסרים לך קורסי קדם לקורס זה</string>
    <string name="courses_msg">אנא סמן את הקורסים שעשית בתואר</string>
    <string name="plan_courses_msg">אנא סמן את הקורסים שברצונך לעשות:</string>
    <string name="version">גרסה 1.0</string>
    <string name="username">שם משתמש: </string>
    <string name="course_number_txt">קורס מספר:</string>
    <string name="added_to_the_list_of_courses">נוסף לרשימת הקורסים</string>
    <string name="exists_in_the_list_of_courses">קיים ברשימת הקורסים</string>
    <string name="removed_from_the_list_of_courses">הוסר מרשימת הקורסים</string>
    <string name="noAftercoursesmsg">קורס זה אינו קורס קדם לקורסים אחרים</string>
    <string name="points_field">נקודות זכות</string>
    <string name="saveBtn">שמירה</string>
    <string name="savedsuccessfully">השינויים נשמרו בהצלחה</string>
    <string name="popup_addgrade">הזן ציון בקורס: </string>
    <string name="schedule_plan">לוח זמנים</string>
    <string name="planning_courses_title">תכנון קורסים</string>
    <string name="semester">סמסטר</string>
    <string name="infofragment_facultyhint">בחר פקולטה/בית ספר</string>
    <string name="infofragment_chughint">בחר חוג</string>
    <string name="infofragment_maslulhint">בחר מסלול</string>
    <string name="infofragment_degreehint">בחר תואר</string>
    <string name="infofragment_degreeYearhint">בחר שנה לתואר</string>
    <string name="infofragment_degreeSemesterhint">סמסטר התחלה</string>
    <string name="infofragment_startYearhint">שנת התחלת התואר</string>
    <string name="hellomail">שלום! החבר שלך</string>
    <string name="invitationmail">רוצה להזמין אותך להצטרף לאפליקציה</string>
    <string name="linkmail">קישור לאפליקציה:</string>
    <string name="mailheader">הזמנה לאפליקציה</string>
    <string name="action_settings">הגדרות</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">חיפוש</string>
    <string name="search_hint">חפש קורס…</string>
    <string name="wait_screen_page_title"><b>HUJI-Asisstant</b></string>
    <string name="settings_drawer_header">הגדרות</string>
    <string name="email_not_valid_message">כתובת אימייל לא תקינה</string>
    <string name="email_field">כתובת מייל</string>
    <string name="user_first_name_field">שם פרטי</string>
    <string name="user_last_name_field">שם משפחה</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register1out3">מסך הרשמה למערכת - שלב 1 מתוך 3</string>
    <string name="register2out3">מסך הרשמה למערכת - שלב 2 מתוך 3</string>
    <string name="register3out3">מסך הרשמה למערכת - שלב 3 מתוך 3</string>
    <string name="private_name">שם פרטי</string>
    <string name="second_name">שם משפחה</string>
    <string name="continue_btn">המשך</string>
    <string name="bottommenusettings">הגדרות</string>
    <string name="bottommenuqrscan">סריקת QR</string>
    <string name="mycoursestitle">הקורסים שלי</string>
    <string name="addcoursebtn">הוספת קורס</string>
    <string name="addcoursehint">הכנס מספר קורס להוספה…</string>
    <string name="addcoursemsg">הוספה</string>
    <string name="mandatory">חובה:</string>
    <string name="mandatorychoose">חובת בחירה:</string>
    <string name="choose">בחירה:</string>
    <string name="suppcourses">משלימים:</string>
    <string name="cornerstonescourses">אבני פינה:</string>
    <string name="outof">מתוך:</string>
    <string name="numberofcoursetoast">קורס מספר:</string>
    <string name="addingcoursemsgsuccess">נוסף בהצלחה</string>
    <string name="average">ממוצע כולל לתואר:</string>
    <string name="grade_tooltip">לחץ על הציון על מנת לשנות אותו</string>
    <string name="hello">שלום</string>
    <string name="uploadCoursesTitle">מסך העלאת מסמכים</string>
    <string name="showFilesBtn">הצגת קבצים</string>
    <string name="showSummariesBtn">הצג מסמכים</string>
    <string name="showImagesBtn">הצג תמונות</string>
    <string name="showfilestitle">מסך הצגת קבצים</string>
    <string name="new_user">משתמש חדש</string>
    <string name="user_exist">משתמש קיים</string>
    <string name="schedule">מערכת שעות</string>
    <string name="no_courses">אין קורסים תחת סינון זה</string>
    <string name="editing_personal_details">עריכת פרטים אישיים</string>
    <string name="my_courses">הקורסים שלי</string>
    <string name="curriculum_planning">תכנון לימודים</string>
    <string name="please_enter_password_msg">נא להכניס סיסמא בת לפחות 8 תווים</string>
    <string name="please_enter_email_msg">נא להכניס כתובת דואר אלקטרוני</string>
    <string name="please_enter_personal_name_msg">נא להזין שם פרטי</string>
    <string name="please_enter_family_name_msg">נא להזין שם משפחה</string>
    <string name="please_enter_faculty_msg">נא להזין פקולטה</string>
    <string name="please_enter_chug_msg">נא להזין חוג</string>
    <string name="please_enter_maslul_msg">נא להזין מסלול</string>
    <string name="email_address_field">כתובת דואר אלקטרוני</string>
    <string name="password_address_field">סיסמא</string>
    <string name="files_screen_desc">במסך זה ניתן לצפות בתמונות ומסמכים שהועלו</string>
    <string name="nameOfStudentMyCoursesScreen">שם הסטודנט: </string>
    <string name="nameOfFacultyMyCoursesScreen">פקולטה: </string>
    <string name="nameOfChugMyCoursesScreen">חוג: </string>
    <string name="nameOfMaslulMyCoursesScreen">מסלול: </string>
    <string name="degreeTypeMyCoursesScreen">תואר: </string>
    <string name="yearOfDegreeMyCoursesScreen">שנה לתואר: </string>
    <string name="yearOfDegreePlannedCoursesScreen">שנה לתואר</string>
    <string name="show_only_selected">הצג מסומנים בלבד</string>
    <string-array name="degreeTypesList">
        <item value="01">בוגר</item>
        <item value="02">מוסמך</item>
    </string-array>
    <string-array name="beginyeararray">
        <item value="1">2022</item>
        <item value="2">2021</item>
        <item value="3">2020</item>
        <item value="4">2019</item>
        <item value="5">2018</item>
        <item value="6">2017</item>
    </string-array>
    <string-array name="semesterArray">
        <item value="01">הכל</item>
        <item value="02">סמסטר א</item>
        <item value="03">סמסטר ב</item>
        <item value="04">סמסטר א או ב</item>
        <item value="05">קורס שנתי</item>
    </string-array>
    <string-array name="yearArray">
        <item value="01">הכל</item>
        <item value="02">שנה א</item>
        <item value="03">שנה ב</item>
        <item value="04">שנה ג</item>
        <item value="05">שנה ד</item>
        <item value="06">שנה ה</item>
    </string-array>
    <string-array name="pointsArray">
        <item value="1">הכל</item>
        <item value="2">1 נקודת זכות</item>
        <item value="3">2 נקודות זכות</item>
        <item value="4">3 נקודות זכות</item>
        <item value="5">4 נקודות זכות</item>
        <item value="6">5 נקודות זכות</item>
        <item value="7">6 נקודות זכות</item>
        <item value="8">7+ נקודות זכות</item>
    </string-array>
    <string-array name="beginsemesterarray">
        <item value="1">סמסטר א</item>
        <item value="2">סמסטר ב</item>
    </string-array>
</resources>