<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage">

    <TextView
        android:id="@+id/myCoursesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planning_courses_title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cardViewTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:cardBackgroundColor="@color/lightorange"
        app:layout_constraintTop_toBottomOf="@id/myCoursesTextView"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nameOfStudentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameOfStudentMyCoursesScreen"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <TextView
                android:id="@+id/nameOfFaculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameOfFacultyMyCoursesScreen"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <TextView
                android:id="@+id/nameOfChug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameOfChugMyCoursesScreen"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <TextView
                android:id="@+id/nameOfMaslul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameOfMaslulMyCoursesScreen"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <TextView
                android:id="@+id/nameOfDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degreeTypeMyCoursesScreen"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <TextView
                android:id="@+id/yearOfDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yearOfDegreeMyCoursesScreen"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:paddingTop="2dp"
                android:src="@android:drawable/divider_horizontal_dark"
                app:layout_constraintTop_toBottomOf="@id/cardViewTop" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/listOfCoursesLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/lightorange2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearlayout2"
        app:layout_constraintTop_toBottomOf="@id/cardViewTop">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layouttext1"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/autocompletechoosepoints"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:inputType="none"
                android:completionHint="@string/points_field"
               android:hint="@string/points_field"
                android:textSize="10sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layouttext2"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/autocompletechoosesemester"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:inputType="none"
                android:completionHint="@string/semester"
               android:hint="@string/semester"
                android:textSize="10sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layouttext3"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/autocompletechooseyear"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:inputType="none"
                android:completionHint="@string/yearOfDegreePlannedCoursesScreen"
                android:hint="@string/yearOfDegreePlannedCoursesScreen"
                android:textSize="10sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightorange2"
        android:maxHeight="300dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/listOfCoursesLayout">

        <TextView
            android:id="@+id/selectCoursesMsg"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/recycleViewMyCourses"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:background="@color/lightorange2"
            android:text="@string/plan_courses_msg"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:id="@+id/approvePlannedCoursesBtn"
            android:layout_gravity="left"
            android:layout_marginTop="3dp"
            android:text="@string/saveBtn"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:src="@android:drawable/divider_horizontal_dark"
            app:layout_constraintTop_toBottomOf="@id/cardViewTop" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewMyCourses"
            android:layout_width="match_parent"
            android:layout_height="374dp"
            android:maxHeight="374dp"
            android:layout_marginTop="25dp"
            android:background="@color/lightorange2"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:scrollbarSize="@android:dimen/app_icon_size"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/listOfCoursesLayout"
            tools:layout_editor_absoluteX="142dp" />

        <CheckBox
            android:id="@+id/showPlanedOnlyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/show_only_selected" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>