<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage">

    <TextView
        android:id="@+id/showFilesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showfilestitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cardViewBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBtn"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="120dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:id="@+id/linearbtnlayout"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/file_screen_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/files_screen_desc"
            android:textSize="16sp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showFilesBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/showSummariesBtn"
            android:textSize="16sp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:background="@color/lightorange"
            app:drawableBottomCompat="@drawable/ic_baseline_folder_24"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showImagesBtn"
            android:layout_width="150dp"
            android:background="@color/lightblue2"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:text="@string/showImagesBtn"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textDirection="rtl"
            android:textStyle="bold"
            app:drawableBottomCompat="@drawable/ic_baseline_image_24" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>