<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundimage">

    <TextView
        android:id="@+id/myCoursesTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardViewTopAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/addcoursebtn"
         />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTopAddCourse"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/lightorange"
        app:layout_constraintTop_toBottomOf="@id/myCoursesTextView"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/insertCourseNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:hint="@string/addcoursehint"
            android:layout_marginLeft="0dp"
            />

        <Button
            android:id="@+id/addCourseToListBtn"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/addcoursemsg"
            />

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>