<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundimage"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_wait_screen"
        android:layout_width="184dp"
        android:layout_height="163dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/ic_baseline_school_24" />

    <TextView
        android:id="@+id/loadingEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/loading"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_wait_screen" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationLoadingOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/loadingEditText"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait_screen_page_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/loadingEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_wait_screen"
        app:layout_constraintVertical_bias="0.208" />

</androidx.constraintlayout.widget.ConstraintLayout>